<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:binding="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.qinyue.example.login.LoginViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logimg"
            android:layout_marginTop="@dimen/dp_30"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@mipmap/ic_launcher" />


        <TextView
            android:layout_margin="@dimen/dp_10"
            style="@style/TextStyle.Title"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:text="登 录"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:tint="?attr/colorAccent"
                    app:srcCompat="@drawable/ic_phone"
                    tools:ignore="VectorDrawableCompat" />

                <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
                    android:id="@+id/et_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"
                    android:hint="@string/tip_please_input_phone_number"
                    android:text="@={viewModel.userName}"
                    android:inputType="number"
                    app:met_clearButton="true"
                    app:met_errorMessage="@string/tip_phone_number_error"
                    app:met_floatingLabel="normal"
                    app:met_floatingLabelText="@string/title_phone_number"
                    app:met_regexp="@string/regex_phone_number" />

            </FrameLayout>


            <FrameLayout
                android:id="@+id/fl_verify_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:tint="?attr/colorAccent"
                    app:srcCompat="@drawable/ic_password"
                    tools:ignore="VectorDrawableCompat" />

                <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
                    android:id="@+id/et_verify_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"
                    android:hint="@string/hint_please_input_verify_code"
                    android:inputType="number"
                    android:text="@={viewModel.password}"
                    app:met_clearButton="false"
                    app:met_errorMessage="@string/tip_verify_code_error"
                    app:met_floatingLabel="normal"
                    app:met_floatingLabelText="@string/lab_verify_code"
                    app:met_maxCharacters="4"
                    app:met_regexp="@string/regex_verify_code" />

                <com.xuexiang.xui.widget.button.roundbutton.RoundButton
                    android:id="@+id/btn_get_verify_code"
                    style="@style/RoundButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:paddingStart="10dp"
                    android:paddingTop="3dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="3dp"
                    android:text="@string/action_get_verify_code"
                    android:textColor="@color/theme_color"
                    android:textSize="13sp"
                    binding:onClickCommand="@{viewModel.getVerifyCodeOnClickCommand}"
                    app:rb_borderColor="@color/theme_color"
                    app:rb_borderWidth="1.5dp"
                    app:rb_radius="15dp" />

            </FrameLayout>


            <FrameLayout
                android:layout_marginTop="@dimen/dp_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.xuexiang.xui.widget.alpha.XUIAlphaTextView
                    android:id="@+id/tv_other_login"
                    style="@style/TextStyle.Explain"
                    android:paddingStart="10dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="5dp"
                    android:text="其他登录方式"
                    android:textColor="@color/xui_config_color_primary_text" />

                <com.xuexiang.xui.widget.alpha.XUIAlphaTextView
                    android:id="@+id/tv_forget_password"
                    style="@style/TextStyle.Explain"
                    android:layout_gravity="end"
                    android:paddingStart="10dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="5dp"
                    android:text="忘记密码"
                    android:textColor="@color/xui_config_color_primary_text" />

            </FrameLayout>

        </LinearLayout>

        <com.xuexiang.xui.widget.textview.supertextview.SuperButton
            android:id="@+id/btn_login"
            binding:onClickCommand="@{viewModel.loginOnClickCommand}"
            style="@style/SuperButton.Primary.Login"
            android:layout_marginTop="16dp"
            android:text="@string/title_login_register" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="20dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextStyle.Explain"
                    android:layout_width="wrap_content"
                    android:text="登陆/注册代表您已阅读并同意"
                    android:textColor="@color/xui_config_color_primary_text" />

                <com.xuexiang.xui.widget.alpha.XUIAlphaTextView
                    android:id="@+id/tv_user_protocol"
                    style="@style/TextStyle.Explain"
                    android:layout_width="wrap_content"
                    android:text="用户协议"
                    android:textColor="?attr/colorAccent" />

                <TextView
                    style="@style/TextStyle.Explain"
                    android:layout_width="wrap_content"
                    android:text="和"
                    android:textColor="@color/xui_config_color_primary_text" />

                <com.xuexiang.xui.widget.alpha.XUIAlphaTextView
                    android:id="@+id/tv_privacy_protocol"
                    style="@style/TextStyle.Explain"
                    android:layout_width="wrap_content"
                    android:text="隐私政策"
                    android:textColor="?attr/colorAccent" />

            </LinearLayout>

        </FrameLayout>
    </LinearLayout>
</layout>
